--- a/package.json
+++ b/package.json
@@ -4,14 +4,28 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
+    "start": "node ./dist/server/entry.mjs",
+    "sync": "astro sync",
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
     "@astrojs/check": "^0.3.3",
+    "@astrojs/node": "^7.0.2",
+    "@astrojs/rss": "^4.0.1",
+    "@astrojs/sitemap": "^3.0.3",
+    "@astrojs/tailwind": "^5.0.3",
     "astro": "^4.0.6",
+    "astro-seo": "^0.8.0",
+    "markdown-it": "^14.0.0",
+    "sanitize-html": "^2.11.0",
+    "tailwindcss": "^3.3.6",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.0",
+    "@types/markdown-it": "^13.0.7",
+    "@types/sanitize-html": "^2.9.5"
   }
 }
