--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "@astrojs/rss": "^4.0.1",
     "@astrojs/sitemap": "^3.0.3",
     "@astrojs/tailwind": "^5.0.3",
+    "@resvg/resvg-js": "^2.6.0",
     "astro": "^4.0.6",
     "astro-seo": "^0.8.0",
     "better-sqlite3": "^9.2.2",
     "drizzle-orm": "^0.29.1",
     "markdown-it": "^14.0.0",
     "sanitize-html": "^2.11.0",
+    "satori": "^0.10.11",
+    "satori-html": "^0.3.2",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.3.3"
   },
